--- a/collector/src/main/resources/pinpoint-collector.properties
+++ b/collector/src/main/resources/pinpoint-collector.properties
@@ -1,5 +1,5 @@
 # tcp listen ip and port
-collector.tcpListenIp=0.0.0.0
+collector.tcpListenIp=10.58.56.158
 collector.tcpListenPort=9994
 
 # number of tcp worker threads
@@ -8,7 +8,7 @@ collector.tcpWorkerThread=8
 collector.tcpWorkerQueueSize=1024
 
 # udp listen ip and port
-collector.udpStatListenIp=0.0.0.0
+collector.udpStatListenIp=10.58.56.158
 collector.udpStatListenPort=9995
 
 collector.l4.ip=
@@ -22,7 +22,7 @@ collector.udpStatSocketReceiveBufferSize=4194304
 
 
 # span listen port ---------------------------------------------------------------------
-collector.udpSpanListenIp=0.0.0.0
+collector.udpSpanListenIp=10.58.56.158
 collector.udpSpanListenPort=9996
 
 
@@ -42,7 +42,7 @@ statistics.flushPeriod=1000
 
 # enable cluster in socket manager.
 cluster.enable=true
-cluster.zookeeper.address=localhost
+cluster.zookeeper.address=10.58.56.134
 cluster.zookeeper.sessiontimeout=30000
 cluster.listen.ip=
 cluster.listen.port=
