--- a/web/src/main/resources/pinpoint-web.properties
+++ b/web/src/main/resources/pinpoint-web.properties
@@ -1,7 +1,7 @@
 #local
 cluster.enable=true
 cluster.web.tcp.port=9997
-cluster.zookeeper.address=localhost
+cluster.zookeeper.address=10.58.56.134
 cluster.zookeeper.sessiontimeout=30000
 cluster.zookeeper.retry.interval=60000
 cluster.connect.address=
@@ -10,9 +10,9 @@ cluster.connect.address=
 admin.password=admin
 
 #log site link (guide url : https://github.com/naver/pinpoint/blob/master/doc/per-request_feature_guide.md)
-#log.enable=false
-#log.page.url=
-#log.button.name=
+log.enable=true
+log.page.url=translog.pinpoint
+log.button.name=log
 
 # Configuration
 config.sendUsage=true
