--- a/web/src/main/resources/hbase.properties
+++ b/web/src/main/resources/hbase.properties
@@ -1,4 +1,4 @@
-hbase.client.host=localhost
+hbase.client.host=10.58.56.134
 hbase.client.port=2181
 
 # hbase timeout option==================================================================================
