--- a/web/src/main/resources/jdbc.properties
+++ b/web/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:13306/pinpoint?characterEncoding=UTF-8
-jdbc.username=admin
-jdbc.password=admin
+jdbc.url=jdbc:mysql://10.58.52.207:3306/pinpoint?characterEncoding=UTF-8
+#jdbc.url=jdbc:mysql://localhost:13306/pinpoint?characterEncoding=UTF-8
+jdbc.username=root
+jdbc.password=rootc
